Got rid of the "this will not work in Firefox"...
Got rid of the "this will not work in Firefox" message

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </div>
   <script src="assets.js"></script>
   <script>
-  alert("IT\'S 2019, BABY! WHOOOOOOOOOOO! \n Also, this won't work unless your browser is Firefox.");
+  alert("IT\'S 2019, BABY! WHOOOOOOOOOOO!");
   </script>
   <!--<input type="number" id="xdist" value="-2">
   <input type="number" id="ydist" value="20">-->
